syntax = "proto3";
package offer;
option java_package = "bisq.offer.protobuf";
option java_multiple_files = true;
import "common.proto";
import "network.proto";
import "security.proto";

// BisqEasy
message BisqEasyOffer {
  string id = 1;
  offer.Direction direction = 2;
  common.Market market = 3;
  uint64 baseSideAmount = 4;
  uint64 quoteSideAmount = 5;
  repeated string paymentMethods = 6;
  string makersTradeTerms = 7;
  uint64 requiredTotalReputationScore = 8;
}

// specs
enum Direction {
  BUY = 0;
  SELL = 1;
}

message FixPrice {
  uint64 value = 1;
}
message FloatPrice {
  double value = 1;
}
message PriceSpec {
  oneof message {
    FixPrice fixPrice = 1;
    FloatPrice floatPrice = 2;
  }
}

message SettlementSpec {
  string settlementMethodName = 1;
  optional string saltedMakerAccountId = 2;
}

// options
message AmountOption {
  double minAmountAsPercentage = 1;
}

message CollateralOption {
  uint64 buyerSecurityDeposit = 1;
  uint64 sellerSecurityDeposit = 2;
}

message ContractOption {
  uint64 maxTradeLimit = 1;
  uint64 maxTradePeriod = 2;
}

message FeeOption {
  enum FeeType {
    BTC = 0;
    BSQ = 1;
  }
  FeeType feeType = 10;
  uint32 blockHeightAtFeePayment = 11;
  string feeTxId = 12;
}

message FiatSettlementOption {
  string countyCodeOfBank = 1;
  string bankName = 2;
}

message AccountCreationDateProof {
  string hashOfAccount = 1;
  string otsProof = 2;
}
message ReputationProof {
  oneof message {
    AccountCreationDateProof accountCreationDateProof = 1;
  }
}
message ReputationOption {
  repeated ReputationProof reputationProofs = 1;
}

message DisputeAgent {
  enum Type {
    MEDIATOR = 0;
    ARBITRATOR = 1;
  }
  Type type = 10;
  network.NetworkId networkId = 11;
}
message SupportOption {
  repeated DisputeAgent disputeAgents = 1;
}

message OfferOption {
  oneof message {
    AmountOption amountOption = 1;
    CollateralOption collateralOption = 2;
    ContractOption contractOption = 3;
    FeeOption feeOption = 4;
    FiatSettlementOption fiatSettlementOption = 5;
    ReputationOption reputationOption = 6;
    SupportOption supportOption = 7;
  }
}

// Offer
message Offer {
  string id = 1;
  uint64 date = 2;
  network.NetworkId makerNetworkId = 3;
  common.Market market = 4;
  Direction direction = 5;
  uint64 baseAmount = 6;
  PriceSpec priceSpec = 7;
  repeated string swapProtocolTypes = 8;
  repeated SettlementSpec baseSideSettlementSpecs = 9;
  repeated SettlementSpec quoteSideSettlementSpecs = 10;
  repeated OfferOption offerOptions = 11;
  network.MetaData metaData = 12;
}

message OpenOffer {
  Offer offer = 1;
}
message OpenOfferStore {
  repeated OpenOffer openOffers = 1;
}
    
